# TU-Vienna-EfficientPrograms

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  cache_set_ramanujan
data/: collisions.csv
include/: cache_set.h  cache_set_no_struct.h  cache_set_perfect.h
reference_programs/: Makefile  ramanujan  ramanujan.c  ramasort.c
results/: collisions.csv  collisions_rehashing.csv  runtimes_all.csv  runtimes_all_formatted.csv  runtimes_bucket.csv  runtimes_raw.csv
src/: 3loops.cpp  bucket_hashing.cpp  cache_set_tests.cpp  collision_evaluation.cpp  collision_evaluation_rehashing.cpp  naive_hashset.cpp  naive_hashset_unordered.cpp  naive_ramanujan.cpp  optimized_ramanujan.cpp  rama2.cpp  ramanujan_2hashsets_unordered.cpp  ramanujan_opt.c  ramanujan_rehashing.cpp  ramanujan_t1.cpp  ramasort_opt.c
stuff/: optimized_ramanujan_no_struct.cpp
